_site/Network_Policies101/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: network-policy-demo
  name: ingress-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
